chore: 🤖 public files and assets

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nave.rs",
+  "name": "Nave challenge",
   "icons": [
     {
       "src": "favicon.ico",
