--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "1.3.13",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
+    "@material-ui/pickers": "3.2.10",
     "@reduxjs/toolkit": "1.3.2",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
@@ -26,11 +28,13 @@
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.2",
     "fontfaceobserver": "2.1.0",
+    "history": "4.10.1",
     "husky": "4.2.3",
     "i18next": "19.3.4",
     "i18next-browser-languagedetector": "4.0.2",
     "jest-styled-components": "7.0.2",
     "lint-staged": "10.0.8",
+    "moment": "2.27.0",
     "node-plop": "0.25.0",
     "plop": "2.6.0",
     "prettier": "2.0.1",
@@ -44,9 +48,10 @@
     "react-scripts": "3.4.3",
     "react-test-renderer": "16.13.0",
     "redux-injectors": "1.3.0",
+    "redux-modal": "4.0.0",
     "redux-saga": "1.1.3",
     "sanitize.css": "11.0.0",
-    "serve": "11.3.0",
+    "serve": "11.3.2",
     "shelljs": "0.8.3",
     "styled-components": "5.0.1",
     "stylelint": "13.2.1",
